--- a/localization/en.json
+++ b/localization/en.json
@@ -8,7 +8,7 @@
 	"MAIN_MENU___ADD_ATTRIBUTE": "Add Property Key",
 	"MAIN_MENU___INSERT_FIELD": "Insert Property Key",
 	"MAIN_MENU___APPEND_FIELD": "Append Property Key",
-	"MAIN_MENU___REVERSE_DB_COLLECTIONS": "TinkerPop graph...",
+	"MAIN_MENU___REVERSE_DB_COLLECTIONS": "Cosmos DB graph...",
 	"MAIN_MENU___FORWARD_DB_COLLECTIONS": "Gremlin script",
 	"OBJECT___BROWSER_RELATIONSHIPS": "Edges",
 	"PROPERTIES_PANE___TAB_RELATIONSHIPS": "Edges",
@@ -79,9 +79,9 @@
 	"MODAL_WINDOW___EMPTY_MODEL_MESSAGE": "The Model does not contain any graph.",
 	"MODAL_WINDOW___FIELD_INFERENCE": "Property Key Inference",
 	"MODAL_WINDOW___KEEP_FIELD_ORDER": "Keep property key order",
-	"MODAL_WINDOW___CANNOT_CONNECT_TO_DB": "Cannot connect to TinkerPop",
-	"MODAL_WINDOW___SUCCESSFULLY_CONNECT_TO_DB": "Successfully connected to TinkerPop",
-	"MODAL_WINDOW___UNABLE_CONNECT_TO_DB": "Unable to connect to TinkerPop",
+	"MODAL_WINDOW___CANNOT_CONNECT_TO_DB": "Cannot connect to Cosmos DB",
+	"MODAL_WINDOW___SUCCESSFULLY_CONNECT_TO_DB": "Successfully connected to Cosmos DB",
+	"MODAL_WINDOW___UNABLE_CONNECT_TO_DB": "Unable to connect to Cosmos DB",
 	"MODAL_WINDOW___DB_ENTITIES_SELECTION_TITLE": "Vertex label selection",
 	"MODAL_WINDOW___RECORDS_MAX": "Records max",
 	"MODAL_WINDOW___SUBDOCUMENT_IN_CHILD": "Sub-document in child",
@@ -90,13 +90,13 @@
 	"MODAL_WINDOW___CREATE_COLLECTION": "Create vertex label",
 	"MODAL_WINDOW___CREATE_BUCKET": "Create graph",
 	"MODAL_WINDOW___ALL_COLLECTIONS": "and all nested vertex labels",
-	"MODAL_WINDOW___CONNENTION_ERROR": "The TinkerPop graph you are connected to does not contain any graph.",
+	"MODAL_WINDOW___CONNENTION_ERROR": "The Cosmos DB graph you are connected to does not contain any graph.",
 	"MODAL_WINDOW___CONTAIN_BUCKETS": "Graphs",
 	"MODAL_WINDOW___CONTAIN_COLLECTIONS": "vertex labels",
 	"MODAL_WINDOW___CONTAIN_BUCKET": "graphs",
 	"MODAL_WINDOW___CONTAIN_COLLECTION": "vertex label",
-	"MODAL_WINDOW___DB_CONNECTION_PROCESS": "TinkerPop Reverse-Engineering Process",
-	"MODAL_WINDOW___DB_CONNECTIONS_LIST_TITLE": "TinkerPop Connections",
+	"MODAL_WINDOW___DB_CONNECTION_PROCESS": "Cosmos DB Reverse-Engineering Process",
+	"MODAL_WINDOW___DB_CONNECTIONS_LIST_TITLE": "Cosmos DB (Gremlin API) Connections",
 	"PROGRESS_BAR___DATABASE": "Graph",
 	"PROGRESS_BAR___COLLECTION": "Vertex label",
 	"PROGRESS_BAR___PROCESS": "Process",
@@ -113,7 +113,7 @@
 	"DOCUMENTATION___BUCKET": "Graph",
 	"DOCUMENTATION___FIELDS": "Property keys",
 	"DOCUMENTATION___CHILD_FIELDS": "Child property key(s)",
-	"DOCUMENTATION___PHYSICAL_MODEL": "TinkerPop Physical Model",
+	"DOCUMENTATION___PHYSICAL_MODEL": "Cosmos DB (Gremlin API) Physical Model",
 	"DOCUMENTATION___VIEWS": "Views",
 	"DOCUMENTATION___VIEW": "Views",
 	"DOCUMENTATION___PARENT_TABLE": "Out of vertex label",
