Add multiple parents

--- a/localization/en.json
+++ b/localization/en.json
@@ -35,12 +35,14 @@
 	"OBJECT___BROWSER_VIEWS": "Views",
 	"OBJECT___BROWSER_DEFINITIONS": "Definitions",
 	"OBJECT___BROWSER_FIELDS": "Property keys",
+	"OBJECT___BROWSER_NESTED_COLLECTIONS":"Sub-Vertices",
 	"PROPERTIES_PANE___BUCKET_NAME": "Graph name",
 	"PROPERTIES_PANE___VIEW_NAME": "View name",
 	"PROPERTIES_PANE___COLLECTION_NAME": "Vertex key",
 	"PROPERTIES_PANE___FOREIGN_COLLECTION": "Foreign vertex label",
 	"PROPERTIES_PANE___FOREIGN_FIELD": "Foreign property key",
-	"PROPERTIES_PANE___PARENT_COLLECTION": "Master-Vertex label",
+	"PROPERTIES_PANE___PARENT_COLLECTION": "Parent Vertex label",
+	"PROPERTIES_PANE___PARENT_COLLECTIONS": "Parent Vertex label",
 	"PROPERTIES_PANE___PARENT_RELATION": "Out of vertex label",
 	"PROPERTIES_PANE___PARENT_FIELD": "Parent property key",
 	"PROPERTIES_PANE___PARENT_CARDINALITY": "Parent cardinality",
@@ -102,7 +104,7 @@
 	"PROGRESS_BAR___DATABASE": "Graph",
 	"PROGRESS_BAR___COLLECTION": "Vertex label",
 	"PROGRESS_BAR___PROCESS": "Process",
-	"DOCUMENTATION___PARENT_COLLECTION": "Master-Vertex label",
+	"DOCUMENTATION___PARENT_COLLECTION": "Parent Vertex label",
 	"DOCUMENTATION___PARENT_FIELD": "Parent property key",
 	"DOCUMENTATION___PARENT_CARDINALITY": "Parent Cardinality",
 	"DOCUMENTATION___CHILD_COLLECTION": "Sub-Vertex label",
@@ -124,7 +126,8 @@
 	"TOOLTIPS___FOREIGN_COLLECTION": "foreign vertex labels",
 	"TOOLTIPS___COLLECTION_BUCKET": "Graphs",
 	"TOOLTIPS___FOREIGN_FIELD": "foreign property key",
-	"TOOLTIPS___PARENT_COLLECTION": "master-vertex label",
+	"TOOLTIPS___PARENT_COLLECTION": "parent vertex label",
+	"TOOLTIPS___PARENT_COLLECTIONS": "parent vertex label",
 	"TOOLTIPS___PARENT_FIELD": "parent property key",
 	"TOOLTIPS___CHILD_COLLECTION": "sub-vertex label",
 	"TOOLTIPS___CHILD_FIELD": "child property key",
