--- a/localization/en.json
+++ b/localization/en.json
@@ -10,12 +10,12 @@
 	"MAIN_MENU___APPEND_FIELD": "Append Property Key",
 	"MAIN_MENU___REVERSE_DB_COLLECTIONS": "Cosmos DB graph...",
 	"MAIN_MENU___FORWARD_DB_COLLECTIONS": "Gremlin script",
-	"OBJECT___BROWSER_RELATIONSHIPS": "Edges",
-	"PROPERTIES_PANE___TAB_RELATIONSHIPS": "Edges",
-	"PROPERTIES_PANE___RELATIONSHIP": "Edges",
-	"MODAL_WINDOW___RELATIONSHIPS_LABEL": "Edges",
-	"DOCUMENTATION___RELATIONSHIPS": "Edges",
-	"CONTEXT_MENU___ADD_RELATIONSHIP": "Add Edge",
+	"OBJECT___BROWSER_RELATIONSHIPS": "Edge Labels",
+	"PROPERTIES_PANE___TAB_RELATIONSHIPS": "Edge Labels",
+	"PROPERTIES_PANE___RELATIONSHIP": "Edge Labels",
+	"MODAL_WINDOW___RELATIONSHIPS_LABEL": "Edge Labels",
+	"DOCUMENTATION___RELATIONSHIPS": "Edge Labels",
+	"CONTEXT_MENU___ADD_RELATIONSHIP": "Add Edge Label",
 	"NEW___RELATIONSHIP_NAME": "New Edge",
 	"TOOLBAR___ADD_BUCKET": "Add Graph",
 	"TOOLBAR___ADD_COLLECTION": "Add Vertex Label",
